--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,6 +15,7 @@
     <h1>Richmond Kwame Nyarko</h1>
     <p><strong>Lab:</strong> Deploy containerized Java web app to ECS (Fargate)</p>
     <p>High availability · ALB · CodeDeploy blue/green</p>
+    <p>Demo</p>
 </div>
 </body>
 </html>
